--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -4,17 +4,9 @@ jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
-        - name: Verifica o repositório do Git
-          uses: actions/checkout@v2
-
-        - name: Instala o node com a versão
-          uses: actions/setup-node@v1
-          with:
-            node-version: 16.13.1
-
-
-        - name: instalando as dependências
-          run: npm install
-
-        - name: executando o lint para verificar se a erros
-          run: npx eslint .
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Instala dependências
+        run: npm install
+      - name: Roda ESlint
+        run: npm run lint
